--- a/template.html
+++ b/template.html
@@ -234,7 +234,7 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active section">
-        <img src="C:\Users\ARSHIL\Downloads\app.jpg" class="d-block w-100" alt="...">
+        <img src="img\1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="section2">
         <p>Take photo with our app</p>
@@ -245,7 +245,7 @@
          <i class="fab fa-android"></i> <i class="fab fa-apple"></i> <i class="fab fa-windows"></i></button>
       </div>
       <div class="carousel-item section3">
-        <img src="C:\Users\ARSHIL\Downloads\app2.jpg" class="d-block w-100" alt="...">
+        <img src="img\2.jpg" class="d-block w-100" alt="...">
       </div>
       <!-- <div class="section4">
         <p>Take photo with our app</p>
