--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       }
 .btn{
   background-color: #4CAF50;
-    color: green;
+    color: white;
     width: 386px;
     margin-top: 10px;
     font-size: 17px;
