--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active section">
-        <img src="E:\git2\img\app.jpg" class="d-block w-100" alt="...">
+        <img src="img\app.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="section2">
         <p>Take photo with our app</p>
@@ -245,7 +245,7 @@
          <i class="fab fa-android"></i> <i class="fab fa-apple"></i> <i class="fab fa-windows"></i></button>
       </div>
       <div class="carousel-item section3">
-        <img src="E:\git2\img\app2.jpg" class="d-block w-100" alt="...">
+        <img src="img\app2.jpg" class="d-block w-100" alt="...">
       </div>
       <!-- <div class="section4">
         <p>Take photo with our app</p>
@@ -256,7 +256,7 @@
          <i class="fab fa-android"></i> <i class="fab fa-apple"></i> <i class="fab fa-windows"></i></button>
       </div> -->
       <div class="carousel-item section5">
-        <img src="E:\git2\img\app4.jpg" class="d-block w-100" alt="...">
+        <img src="img\app4.jpg" class="d-block w-100" alt="...">
       </div>
       <!-- <div class="section6">
         <p>Take photo with our app</p>
@@ -287,7 +287,7 @@
           <h3 class="hnn1"><span id="hnn">Available for </span> <i class="fab fa-android" style="color: #4CAF50;"></i> <i class="fab fa-apple"></i> <i class="fab fa-windows" style="color: #2196F3;"> </i></button></h3>
         </div>
         <div class="col-md-4">
-          <img id="img5" src="E:\git2\img\img_app.jpg" alt="">
+          <img id="img5" src="img\img_app.jpg" alt="">
         </div>
       </div>
     </div>
@@ -295,7 +295,7 @@
     <div class="container" style="padding-bottom: 55px;">
       <div class="row">
         <div class="col-md-3 section9">
-          <img src="E:\git2\img\app5.jpg" id="img6" alt="">
+          <img src="img\app5.jpg" id="img6" alt="">
         </div>
           <div class="col-md-9 section10">
           <h1 style="color: black; font-size: 70px;">Clarity</h1>
